backend/k8s/api-service.yml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-api
  namespace: ecommerce

spec:
  selector:
    app: ecommerce-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
