backend/k8s/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: ecommerce

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
