backend/k8s/redis-service.yml
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: ecommerce

spec:
  selector:
    app: redis

  ports:
    - port: 6379
