backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce

  namespace: ecommerce

spec:
  rules:
    - host: ecommerce.local

      http:

        paths:
          - path: /

            pathType: Prefix

            backend:

              service:

                name: ecommerce-api

                port:

                  number: 80
